refactor: simplify cross-game animation donation code (extract shared utilities, remove duplication)
- Add AnimationId.fromCanonical() static generic utility; delegate all three game enum fromCanonical() to it
- Add DonorCapabilities.buildFallbackMap() static generic utility; replace all three buildFallbacks() implementations
- Add GameModule.getGameId() default method; replace CrossGameFeatureProvider.resolveHostCode() with direct call
- Replace CrossGameFeatureProvider.resolveModule().getDonorCapabilities() with resolveDonorCapabilities()
- Capture PlayerArt instances once in lambda closure in all three DonorCapabilities.getPlayerArtProvider()
- Collapse AnimationTranslator declare-then-set pattern; only keep walkId variable for airAnimId reuse

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>